--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Virus or Bacteria",
+  "name": "A virus or bacteria infection diagnosys tool",
   "icons": [
     {
       "src": "favicon.ico",
