package json updated with homepage

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "virus-or-bacteria",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://sergioloporto.github.io/Virus-or-bacteria-detector-REACT",
   "dependencies": {
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
