--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "private": true,
   "dependencies": {
     "gh-pages": "^2.1.1",
+    "json-server": "^0.15.1",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "redux": "^4.0.5",
     "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "json-server --watch ./src/db-json/users.json --port 3005",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
